--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@abihf/home-dashboard",
   "version": "0.1.0",
   "private": true,
+  "license": "LGPL-3.0-or-later",
   "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
