--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "playwright test",
+		"test:integration": "playwright test --browser=firefox",
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@playwright/browser-firefox": "^1.40.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
