--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,17 @@
-.next
+Dockerfile
+.dockerignore
+.git
+.gitignore
+.gitattributes
+README.md
+.npmrc
+.prettierrc
+.eslintrc.cjs
+.graphqlrc
+.editorconfig
+.svelte-kit
+.vscode
 node_modules
+build
+package
+**/.env
