--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"vite": "^5.0.2",
 		"vitest": "^0.34.6"
 	},
+	"overrides": {
+		"vite": "$vite"
+	},
 	"type": "module",
 	"volta": {
 		"node": "20.10.0"
