--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"license": "LGPL-3.0-or-later",
 	"private": true,
 	"scripts": {
-		"start": "node build",
+		"start": "bun ./build/index.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -19,8 +19,8 @@
 	"devDependencies": {
 		"@playwright/browser-firefox": "^1.40.0",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-node": "^2.0.0",
 		"@sveltejs/kit": "^2.0.0",
+		"@types/bun": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -30,6 +30,7 @@
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^5.0.0-next.1",
+		"svelte-adapter-bun": "^0.5.1",
 		"svelte-check": "^3.6.0",
 		"systeminformation": "^5.21.17",
 		"tailwindcss": "^3.3.5",
