--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"license": "LGPL-3.0-or-later",
 	"private": true,
 	"scripts": {
-		"start": "node build",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -19,30 +18,26 @@
 	"devDependencies": {
 		"@playwright/browser-firefox": "^1.40.0",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-node": "^4.0.0",
+		"@sveltejs/adapter-node": "^5.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"eslint": "^8.28.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.0.0-alpha.26",
+		"@typescript-eslint/parser": "^8.0.0-alpha.26",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "2.36.0-next.2",
+		"eslint-plugin-svelte": "^2.37.0",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
+		"svelte": "^5.0.0",
+		"svelte-adapter-bun": "^0.5.2",
+		"svelte-check": "^4.0.4",
 		"systeminformation": "^5.21.17",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.2",
-		"vitest": "^1.1.0"
+		"vitest": "^2.0.0"
 	},
-	"overrides": {
-		"vite": "$vite"
-	},
-	"type": "module",
-	"volta": {
-		"node": "20.11.0"
-	}
+	"type": "module"
 }
