--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
 		"@sveltejs/adapter-node": "^5.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/vite": "^4.0.7",
 		"@typescript-eslint/eslint-plugin": "^8.0.0-alpha.26",
 		"@typescript-eslint/parser": "^8.0.0-alpha.26",
 		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.0.0",
+		"eslint-config-prettier": "^10.0.0",
 		"eslint-plugin-svelte": "^2.37.0",
-		"postcss": "^8.4.31",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^5.0.0",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.0.4",
 		"systeminformation": "^5.21.17",
-		"tailwindcss": "^3.3.5",
+		"tailwindcss": "^4.0.7",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.1",
-		"vitest": "^2.0.0"
+		"vitest": "^3.0.0"
 	},
 	"type": "module"
 }
