--- a/package.json
+++ b/package.json
@@ -10,33 +10,26 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"lint": "biome check .",
+		"format": "biome format --write .",
 		"test:integration": "playwright test --browser=firefox",
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@playwright/browser-firefox": "^1.40.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^5.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.7",
-		"@typescript-eslint/eslint-plugin": "^8.0.0-alpha.26",
-		"@typescript-eslint/parser": "^8.0.0-alpha.26",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^10.0.0",
-		"eslint-plugin-svelte": "^2.37.0",
-		"prettier": "^3.0.0",
-		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^5.0.0",
-		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.0.4",
 		"systeminformation": "^5.21.17",
 		"tailwindcss": "^4.0.7",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^6.0.1",
+		"vite": "npm:rolldown-vite@latest",
 		"vitest": "^3.0.0"
 	},
 	"type": "module"
