--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,15 +1,12 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"ignore": [".svelte-kit/**/*", "build/**/*"]
+		"includes": ["**", "!.svelte-kit/**/*", "!build/**/*"]
 	},
 	"formatter": {
 		"enabled": true
 	},
 	"linter": {
-		"enabled": true
-	},
-	"organizeImports": {
 		"enabled": true
 	}
 }
